Notification theme changed, fixes unwanted scrollbars in notifications on FF3.
Fixed datefield styles inside table (row height now remains the same).

svn changeset:5624/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/notification/notification.css
+++ b/WebContent/ITMILL/themes/default/notification/notification.css
@@ -1,43 +1,70 @@
 
 .i-Notification {
 	font-family: "Trebuchet MS", geneva, helvetica, arial, tahoma, verdana, sans-serif;
-	background-color: #999999;
+	background-color: #818e92;
 	color: #ffffff;
-	padding: 0.3em;
+	padding: 9px 12px;
 	cursor: pointer;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
+	overflow: hidden;
 }
-.i-Notification H1,
+.i-Notification h1,
 .i-Notification p,
-.i-Notification.error H1,
+.i-Notification.error h1,
 .i-Notification.error p,
-.i-Notification.warning H1,
+.i-Notification.warning h1,
 .i-Notification.warning p {
 	display: inline;
-	padding: 0.1em;
-}
-.i-Notification.tray H1,
-.i-Notification.tray p {
-	display: block;
-	font-size: 1em;
-	line-height: 0.5em;
+	font-weight: normal;
+	white-space: nowrap;
+	margin: 0 10px 0 0;
 }
 
 .i-Notification.warning {
-	background: #f14c1a;
+	background: #fff1e4;
+	color: #dd3400;
+	border: 2px solid #ffaa90;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	opacity: 1;
 }
 
 .i-Notification.error {
-	background-color: #ff0a0a;
-	/*background-image: url(img/notification-error.png);*/ /* FIXME where is this image? */
-	background-repeat: no-repeat;
-	background-position: center right;
+	background: #f23d00 url(img/close-error.png) no-repeat right 5px;
 	padding-right: 30px;
+	border: 3px solid #c30000;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
 }
-.i-Notification.tray {
 
+
+.i-Notification.tray {
+	background: #575e60;
+	padding: 0.5em;
+	margin: 0 5px 5px 0;
+}
+.i-Notification.tray h1 {
+	display: block;
+	font-weight: bold;
+	font-size: 0.9em;
+	line-height: 1.1;
+	background: #3b4245;
+	padding: 4px 10px;
+	margin: 0;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+.i-Notification.tray p {
+	display: block;
+	font-size: 0.9em;
+	line-height: 1.1;
+	margin: 8px 10px 5px 10px;
+	color: #e4e7ea;
 }
 
 .i-Notification.system {
@@ -45,9 +72,9 @@
 	opacity: 0.7;
 	filter: alpha(opacity=70);
 }
-.i-Notification.system H1 {
+.i-Notification.system h1 {
 	display: block;
-	margin: 0px;
+	margin: 0;
 }
 .i-Notification.system p {
 	white-space: nowrap;
